[chromium] Fonts returned by FontCache::getFontDataForCharacters() are never released https://bugs.webkit.org/show_bug.cgi?id=66673

Reviewed by James Robinson.

This was fixed for other ports in http://trac.webkit.org/changeset/88260.
However, it was missed in FontCacheLinux likely due to similar param in the nested call to getCachedFontPlatformData().

No new tests because no directly observable change in behavior.

* platform/graphics/chromium/FontCacheLinux.cpp:
(WebCore::FontCache::getFontDataForCharacters):


Canonical link: https://commits.webkit.org/83232@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94323 268f45cc-cd09-0410-ab3c-d52691b4dbfc